--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
                 <div class="about__item">
                     <div class="about__subtitle">немного о цифрах</div>
                     <img src="icons/about/chair.png" alt="chair">
-                    <div class="about__seats"><span>1600</span> посадочный мест</div>
+                    <div class="about__seats"><span>1600</span> посадочных мест</div>
                     <img src="icons/about/theater.png" alt="theater">
                     <div class="about__seats"><span>350</span> лет истории</div>
                 </div>
