add all sections need rework form

--- a/src/index.html
+++ b/src/index.html
@@ -134,5 +134,69 @@
         </div>
     </div>
 
+    <div class="best">
+        <div class="container">
+            <div class="best__wrapper">
+                <div class="best__numbers">
+                    2018<br>
+                    2019<br>
+                    2020<br>
+                </div>
+                <div class="best__item">
+                    <img src="icons/stars.png" alt="stars">
+                    <div class="best__text">Лучший театр<br>
+                        по мнению театральных<br> критиков Парижа</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="partners">
+        <div class="container">
+            <div class="title partners__title"><span> партнеры </span> театра</div>
+            <div class="partners__wrapper">
+                <div class="partners__item"><img src="icons/partners/vk.svg" alt="vk"></div>
+                <div class="partners__item"><img src="icons/partners/lukoil.svg" alt="lukoil"></div>
+                <div class="partners__item"><img src="icons/partners/MTS.svg" alt="mts"></div>
+                <div class="partners__item"><img src="icons/partners/vtb.svg" alt="vtb"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="donate">
+        <div class="container">
+            <div class="title donate__title"><span> стать </span> меценатом</div>
+            <div class="donate__wrapper">
+                <div class="donate__item">
+
+                </div>
+                
+                <form action="#" class="donate__form">
+                        <div class="donate__input">
+                            <input name="name" id="name" type="text">
+                            <label for="name">Имя</label>
+                        </div>
+                        <div class="donate__input">
+                            <input name="name" id="company" type="text">
+                            <label for="company">Компания</label>
+                        </div>
+                        <div class="donate__input">
+                            <input name="phone" id="phone" type="number">
+                            <label for="phone">Телефон</label>
+                        </div>
+                        <div class="donate__input">
+                            <input name="email" id="email" type="email">
+                            <label for="email">E-mail</label>
+                        </div>
+    
+                        <div class="donate__textarea">
+                            <textarea name="text" id="text"></textarea>
+                            <label for="text">Сообщение</label>
+                        </div>
+                </form>                
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
